Updated game environment
git-svn-id: https://cqst.svn.cloudforge.com/whatif/trunk@146 69397c0b-356f-4d35-a2df-60609b7992a0

--- a/src/se/cqst/whatif/resources/containers.properties
+++ b/src/se/cqst/whatif/resources/containers.properties
@@ -24,12 +24,22 @@
 !							standard (e.g. CONT001 for Containers) to avoid mistakes.
 
 !	BEGIN	!
-CONT001_NAME		=	Dusty bookcase
-CONT001_DESC		=	The dusty bookcase is filled with old tomes. Most of them are in \
-						a language you cannot understand.
+CONT001_NAME		=	Bookcase
+CONT001_DESC		=	An old bookcase filled with nondescript books.
 CONT001_LOCATION	=	ROOM001
 
-CONT002_NAME		=	Large sofa
-CONT002_DESC		=	A blue-grey sofa with room for at least 5 persons. You notice an \
-						opening mechanism on the side of the sofa.
+CONT002_NAME		=	Sofa
+CONT002_DESC		=	A blue-grey sofa with room for at least 5 persons. The sofa is facing a TV.
 CONT002_LOCATION	=	ROOM001
+
+CONT003_NAME		=	TV-Table
+CONT003_DESC		=	A square, black, TV-table stands in front of the sofa.
+CONT003_LOCATION	=	ROOM001
+
+CONT004_NAME		=	Bureau
+CONT004_DESC		=	A low, wooden bureau with four drawers.
+CONT004_LOCATION	=	ROOM002
+
+CONT005_NAME		=	Table
+CONT005_DESC		=	A plain, white, kitchen table.
+CONT005_LOCATION	=	ROOM003
