--- a/src/se/cqst/whatif/resources/items.properties
+++ b/src/se/cqst/whatif/resources/items.properties
@@ -1,10 +1,40 @@
 !	THIS IS A COMMENT	!
-ITEM001_NAME		=		Rusty Dagger
+ITEM001_NAME		=		Rug
 ITEM001_TYPE		=		StaticItem
-ITEM001_DESC		=		A rusty old dagger
+ITEM001_DESC		=		A big, orange rug.
 ITEM001_LOCATION	=		ROOM001
 
-ITEM002_NAME		=		Coca-Cola can
+ITEM002_NAME		=		Red Book
 ITEM002_TYPE		=		MovableItem
-ITEM002_DESC		=		An empty Cola can
-ITEM002_LOCATION	=		ROOM002
+ITEM002_DESC		=		The cover says: \"Coronado, by Dennis Lehane\"
+ITEM002_LOCATION	=		CONT001
+
+ITEM003_NAME		=		Blue Book
+ITEM003_TYPE		=		MovableItem
+ITEM003_DESC		=		A large, blue book. It seems to be about learning Java.
+ITEM003_LOCATION	=		CONT001
+
+ITEM004_NAME		=		T-Shirt
+ITEM004_TYPE		=		MovableItem
+ITEM004_DESC		=		A plain, black T-shirt
+ITEM004_LOCATION	=		CONT002
+
+ITEM005_NAME		=		Soda Can
+ITEM005_TYPE		=		MovableItem
+ITEM005_DESC		=		The label reads: \"Dr. Pepper Zero\". It's empty.
+ITEM005_LOCATION	=		CONT003
+
+ITEM006_NAME		=		Pair of socks
+ITEM006_TYPE		=		MovableItem
+ITEM006_DESC		=		A pair of black socks.
+ITEM006_LOCATION	=		CONT004
+
+ITEM007_NAME		=		Glass
+ITEM007_TYPE		=		MovableItem
+ITEM007_DESC		=		A glass filled to the half with water - or is it half empty? 
+ITEM007_LOCATION	=		CONT005
+
+ITEM008_NAME		=		Boots
+ITEM008_TYPE		=		MovableItem
+ITEM008_DESC		=		A pair of black boots. They look old.
+ITEM008_LOCATION	=		ROOM002
