--- a/src/se/cqst/whatif/resources/rooms.properties
+++ b/src/se/cqst/whatif/resources/rooms.properties
@@ -34,24 +34,23 @@ ROOM_START		=	ROOM001
 
 !	THIS IS A COMMENT	!
 ROOM001_NAME	=	Living Room
-ROOM001_DESC	=	You enter a simple living room. Through the panoramic windows to south \
-					you can see a huge tree, a motorway, and in the distance a small church.
-ROOM001_ENV		=	There is a bookcase on the north wall filled with books, portraits and \
-					miscellaneous junk. Along the west wall is a large sofa with an adjacent TV-table. \
-					To the south wall is a panoramic window.
+ROOM001_DESC	=	You enter a small living room. There are windows looking out on a city \
+					on the west and south walls.\nThere is a hallway to the east.
+ROOM001_ENV		=	You hear the chimes of a church bell coming from somewhere outside.
 
 ROOM002_NAME	=	Hallway
 ROOM002_DESC	=	You enter a long hallway. The hallway feels very grand to this small apartment. \
-					You notice that there is quite a high ceiling here.
-ROOM002_ENV		=	On the south wall is a drawer. There is an old rug on the floor.
+					You notice that there is quite a high ceiling here.\nTo the west is a living room, \
+					to the north is a bathroom, to the south is a kithcen.
+ROOM002_ENV		=	The air is dry in here.
 
 ROOM003_NAME	=	Kitchen
-ROOM003_DESC	=	As you enter the kitchen, you are struck with faint smell of old dishes. 
-ROOM003_ENV		=	Along the west wall is a sink filled with dishes, an oven and a refrigerator. \
-					There is a window with the shutters down on the south wall. On the east wall \
-					is a small table. 
+ROOM003_DESC	=	You enter a long kitchen. There is a sink on the west wall, and a window with the \
+					shutters down on the south wall.\n\
+					There is a hallway to the north. 
+ROOM003_ENV		=	You hear a humming sound from the refridgerator.
 
 ROOM004_NAME	=	Bathroom
 ROOM004_DESC	=	The bathroom is so small that there is barely room to stand in here.
 ROOM004_ENV		=	You see a shower on the north wall, a toilet on the west wall and a sink on the \
-					east wall.
+					east wall.\nTo the south is a hallway.
